# aiFA

./: .gitlab-ci.yaml  .gitlab-ci.yml  README.md  docker-compose.yaml
.gitlab/ci/: _rules.gitlab-ci.yml  _template.gitlab-ci.yml  cron.gitlab-ci.yml  dependency-scanning.gitlab-ci.yml  docs.gitlab-ci.yml  security-scanning.gitlab-ci.yml  server.gitlab-ci.yml  web.gitlab-ci.yml
.gitlab/issue_templates/: Bug.md  Default.md  Feature Proposal.md  Implementation.md
.gitlab/merge_request_templates/: Default.md
cron/: .env.sample  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.gpu.old  Makefile  README.md  cronjob.sh  crontab  entrypoint.sh  pyproject.toml
cron/aifa_cron/: config.py  crontab  database.py
cron/aifa_cron/ai_trainer/: find_stock.py  plot_graph.py
cron/aifa_cron/ai_trainer/model/: decision_forest.py  lstm.py  lstm_new.py  rnn.py
cron/aifa_cron/jobs/: grab_daily_stock.py  grab_historical_stock.py
docs/: .gitignore  README.md  architecture.md  package.json
docs/mongo/schema/: portfolio.md  session.md  stock.md  user.md
docs/server/: config.md
grab_stock/: .env.sample  .gitignore  Dockerfile  pyproject.toml
grab_stock/services/: grab_daily_stock.py  grab_financial_report.py  grab_stock_data.py
minio/: .env.sample
scripts/: codequality_abs_path.py
server/: .dockerignore  .env.sample  .gitignore  Dockerfile  Dockerfile.gpu  Makefile  README.md  pyproject.toml
server/aifa/: app.py  config.py
server/aifa/dependencies/: session.py
server/aifa/models/: portfolio.py  session.py  stock.py  user.py
server/aifa/routers/: stock.py  user.py
server/aifa/service/: jwt.py
server/aifa/services/: database.py  portfolio.py  session.py  stock.py  user.py
server/aifa/stock_data/: grab_stock_data.py
server/aifa/utils/: password.py
web/: .env.sample  .gitignore  .prettierrc.json  README.md  package.json
web/public/: index.html  manifest.json
web/src/: config.ts  index.tsx
web/src/components/App/: App.tsx
web/src/components/CardDisplay/: CardDisplay.tsx
web/src/components/Dashboard/: Dashboard.tsx
web/src/components/DashboardLayout/: DashboardLayout.tsx  DrawerMenu.tsx  DrawerMenuItem.tsx  NavigationBar.tsx
web/src/components/DashboardNavigationBar/: DashboardNavigationBar.tsx
web/src/components/DashboardNavigationBar/ClippedDrawerMenu/: ClippedDrawerMenu.tsx
web/src/components/DashboardNavigationBar/NavBarMenu/: NavBarMenu.tsx
web/src/components/DashboardNavigationBar/NavBarPopover/: NavBarPopover.tsx
web/src/components/DashboardPage/: DashboardPage.tsx
web/src/components/DrawerMenu/: DrawerMenu.tsx
web/src/components/FormSubmitButton/: FormSubmitButton.tsx
web/src/components/HomePage/: HomeNavigationBar.tsx  HomePage.tsx
web/src/components/InvestmentPage/: CreatePortfolioDialog.tsx  InvestmentPage.tsx
web/src/components/LoginPage/: LoginPage.tsx
web/src/components/Logout/: Logout.tsx
web/src/components/LogoutPage/: LogoutPage.tsx
web/src/components/NavigationBar/: NavigationBar.tsx
web/src/components/PortfolioPage/: PortfolioPage.tsx  PortfolioTableRow.tsx
web/src/components/PortfolioPage/ClosePriceRow/: ClosePriceRow.tsx
web/src/components/PortfolioPage/PredictRow/: PredictRow.tsx
web/src/components/ProfilePage/: ProfilePage.tsx
web/src/components/RegisterPage/: RegisterPage.tsx
web/src/components/Router/: RequireLoginRoute.tsx  Router.tsx
web/src/components/StockQuotePage/: StockCard.tsx  StockQuotePage.tsx
web/src/components/UserContextProvider/: UserContextProvider.tsx  userContextProvider.test.tsx
web/src/components/UserNavigationBar/: UserNavigationBar.tsx
web/src/components/UserProfilePage/: UserProfilePage.tsx
web/src/context/: UserContext.ts
web/src/hooks/: useClosePrice.ts  usePortfolio.ts  usePredict.ts  useStockData.ts  useStockGraph.ts  useUser.ts  useUserProfile.ts
web/src/models/: Investment.ts  InvestmentStack.ts  LoginStatus.ts  Portfolio.ts  Prediction.ts  Stock.ts  StockType.ts  User.ts
web/src/services/: session.ts
web/src/services/aifaAPI/: stock.ts  user.ts
web/src/utils/: email.test.ts  email.ts
