[tool.poetry]
name = "cron-job"
version = "0.1.0"
description = "Cronjob for stock grabbing and AI training model"
authors = ["Wesley So <wesleyso0614@gmail.com>"]
license = "PROPRIETARY"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.5.3"
pymongo = "^4.3.3"
tensorflow = "^2.11.0"
tensorflow-decision-forests = "1.2.0"
tensorflow-macos = {version="^2.11.0", markers = "sys_platform == 'darwin'"}
tensorflow-metal = {version="^0.7.0", markers = "sys_platform == 'darwin'"}
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-gl-codeclimate = "^0.2.1"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
