[tool.poetry]
name = "cron-job"
version = "0.1.0"
description = "Cronjob for stock grabbing and AI training model"
authors = ["Wesley So <wesleyso0614@gmail.com>"]
license = "PROPRIETARY"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.5.3"
pymongo = "^4.3.3"
#tensorflow = "2.10.1"
requests = "^2.28.2"
scikit-learn = "1.2.1"
plotly = "5.13.1"
kaleido = "0.2.1"
matplotlib = "3.7.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-gl-codeclimate = "^0.2.1"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
