[tool.poetry]
name = "aifa"
version = "0.1.0"
description = "Financial advisor with artificial intelligence (AI) system to predict 20 NASDAQ stock price"
authors = ["Wesley So <wesleyso0614@gmail.com>"]
license = "PROPRIETARY"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
fastapi = {extras = ["all"], version = "^0.89.0"}
tensorflow = "^2.11.0"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
