[tool.poetry]
name = "aifa"
version = "0.1.0"
description = "Financial advisor with artificial intelligence (AI) system to predict 20 NASDAQ stock price"
authors = ["Wesley So <wesleyso0614@gmail.com>"]
license = "PROPRIETARY"

[tool.poetry.dependencies]
python = "~3.10"
bcrypt = "^4.0.1"
fastapi = {extras = ["all"], version = "^0.89.0"}
motor = "^3.1.1"
pyjwt = "^2.6.0"
pymongo = {extras = ["snappy", "srv", "tls"], version = "^4.3.3"}
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-gl-codeclimate = "^0.1.6"
isort = "^5.12.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
